# zero2prod

./: Cargo.toml  Dockerfile  precommit.sh  spec.yaml
.cargo/: config.toml
.github/workflows/: ci.yml
.sqlx/: query-5d10efa6cf5d8675c6b47744cf387c4f333b7e3f533bcbae3ab92009fe0f3ea4.json  query-74e864a0c6d61fe6964bbbb9663bcf3a37c27a8900f161d5760ab234c27c19a4.json  query-88a4fdafb5cbd86020195b02e60608e761045e0c3c696e014075aedce4fad8a4.json  query-b1225fc21b5fa7c85f8c7c37925b426c39edb2cb466018be961471f55277eed0.json  query-e302fdc7b0e43c6edbb504ce2b3f85c8c288ffd784680fc015e75f92b16242f2.json
configuration/: production.yaml
migrations/: 20260325055555_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  error.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs  subscription_token.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
