[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = {  version = "0.8.8" , features = ["tracing"]}
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1", features = ["derive"]}
config = "0.11"
uuid = { version = "1.21.0", features = ["v4"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing-subscriber = { version = "0.3.22" , features = ["env-filter", "registry"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
once_cell = "1.21.3"
secrecy = { version = "0.10.3", features = ["serde"] }
serde-aux = "4.7.0"
unicode-segmentation = "1.12.0"
claim = "0.5.0"
validator = "0.20.0"
fake = "~2.3.0"
quickcheck_macros = "1.2.0"
quickcheck = "0.9.x"
[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "tls-rustls",
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.13.2"
